feature: jmh 基准测试

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <!-- <scope>test</scope> -->
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core-benchmarks</artifactId>
+            <version>1.21</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
